--- a/templates/home.html
+++ b/templates/home.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="<https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css>" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="<https://unpkg.com/htmx.org@1.9.12>"></script>
     <title>Home Page</title>
 </head>
 <body>
-<div class="row">
-        
-        <div class="col">
-            <h2>Courses</h2>
-           
-            <!-- <div id="taskList" hx-get="/tasks" hx-trigger="load" hx-swap="innerHTML">
-            </div> -->
-            
+    <div class="flex flex-row">
+        <div class="flex flex-col">
+            <h2>Course Management</h2>
+            {{range .}}
+            <a href="">{{.}}</a>
+            {{end}}
         </div>
-        <!-- <div class="col">
-            
-        </div> -->
+        <div class="flex flex-col">
+            <h1>Add Records</h1>
+            <div class="flex flex-row flex-wrap">
+                {{range .}}
+                <button class="btn primary" hx-target="#addTaskForm" hx-swap="beforeend">
+                    {{.}}
+                </button>
+                {{end}}
+            </div>
+        </div>
 
-                <!-- {{template "addTaskForm"}} -->
-           
-            
-        </div>
     </div>
-    
+    </div>
 </body>
 </html>
+
+
