--- a/templates/table.html
+++ b/templates/table.html
@@ -27,7 +27,15 @@
         </td>
         {{end}}
         <td class="border border-gray-300 px-4 py-2">
-          <button class="text-blue-500 hover:text-blue-700 mr-2">Edit</button>
+          <button
+            class="text-blue-500 hover:text-blue-700 mr-2"
+            hx-get="/edit/{{ $firstElement }}"
+            hx-target="body"
+            hx-swap="beforeend"
+            hx-vals='{"contentType": "{{ $content_type}}"}'
+          >
+            Edit
+          </button>
           <button
             hx-delete="data/{{ $firstElement }}"
             hx-confirm="Are you sure you want to delete this {{ $content_type }}? It might have cascading effects."
