--- a/templates/editModal.html
+++ b/templates/editModal.html
@@ -3,10 +3,12 @@
   class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
   _="on closeModal remove me; console.log('Modal closed')"
 >
-  <div class="modal-content bg-white rounded-lg shadow-lg w-80 p-6 relative">
+  <div
+    class="modal-content bg-white rounded-lg shadow-lg w-full max-w-[44rem] p-6 relative"
+  >
     <button
-      class="absolute top-2 right-2 text-red-500"
-      _="on click trigger closeModal; console.log('Close button clicked')"
+      class="absolute top-2 right-2 text-red-500 hover:text-red-700 transition duration-200"
+      onclick="document.getElementById('modal').remove(); console.log('Close button clicked');"
     >
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -25,22 +27,28 @@
       </svg>
     </button>
 
-    <h1 class="text-xl">{{.Label}}</h1>
+    <h1 class="text-xl font-semibold mb-4 text-center">{{.Label}}</h1>
+
     <form hx-put="/data" hx-target="#modal" hx-swap="innerHTML">
       <input type="hidden" name="contentType" value="{{.Label}}" />
-      {{range .FComponent}}
-      <h1 class="text-lg font-semibold mb-2">{{.Label}}</h1>
-      <input
-        type="text"
-        name="{{.Label}}"
-        value="{{.Fvalue}}"
-        class="border border-gray-300 rounded-md p-2 w-full mb-4"
-      />
-      {{end}}
+
+      <div class="grid grid-cols-2 gap-4 mb-4">
+        {{range .FComponent}}
+        <div>
+          <label class="text-sm font-semibold mb-1 block">{{.Label}}</label>
+          <input
+            type="text"
+            name="{{.Label}}"
+            value="{{.Fvalue}}"
+            class="border border-gray-300 rounded-md p-2 w-full focus:outline-none focus:ring focus:ring-blue-300 transition duration-200"
+          />
+        </div>
+        {{end}}
+      </div>
 
       <button
         type="submit"
-        class="bg-blue-500 text-white rounded-md px-4 py-2 hover:bg-blue-600"
+        class="bg-blue-500 text-white rounded-md px-4 py-2 hover:bg-blue-600 transition duration-200 w-full"
       >
         Submit
       </button>
