--- a/templates/addpage.html
+++ b/templates/addpage.html
@@ -1,6 +1,6 @@
 <div>
   <h1 class="text-2xl p-4">Add Records</h1>
-  <div class="flex flex-row flex-wrap space-x-2 space-y-2">
+  <div class="flex flex-row flex-wrap gap-4">
     {{range .}}
     <button
       hx-get="/modal"
