--- a/templates/home.html
+++ b/templates/home.html
@@ -16,30 +16,10 @@
       <div
         class="flex flex-col h-full border border-black bg-white transition-all duration-300 w-64 peer-checked:w-64"
       >
-        <!-- <div
-        class="flex flex-col h-full border border-black bg-white transition-all duration-300 w-16 peer-checked:w-64"
-      > -->
         <label
           for="sidebar-toggle"
           class="flex items-center justify-center cursor-pointer h-16 bg-gray-200"
         >
-          <!-- <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            class="lucide lucide-menu"
-          >
-            <line x1="4" x2="20" y1="12" y2="12" />
-            <line x1="4" x2="20" y1="6" y2="6" />
-            <line x1="4" x2="20" y1="18" y2="18" />
-          </svg> -->
-          <!-- <h3 class="text-2xl hidden peer-checked:block">Course Management</h3> -->
           <h3 class="text-xl">Course Management</h3>
         </label>
         <button
@@ -48,7 +28,7 @@
           hx-swap="innerHTML"
           class="block p-2 text-gray-700 hover:bg-gray-200 w-full"
         >
-          Insert Data
+          Dashboard
         </button>
         <div
           class="flex flex-col items-start mt-4 space-y-2 overflow-hidden w-full"
