--- a/templates/editModal.html
+++ b/templates/editModal.html
@@ -33,13 +33,13 @@
 
     <form
       hx-put="/data"
-      hx-target="#delModal-content"
+      hx-target="#resModal-content"
       hx-swap="innerHTML"
       hx-on="htmx:afterRequest: if (event.detail.xhr.status === 200) { 
         const response = JSON.parse(event.detail.xhr.responseText);
-        document.getElementById('delModal-content').innerHTML = response.message; 
+        document.getElementById('resModal-content').innerHTML = response.message; 
         document.getElementById('modal').remove(); 
-        document.getElementById('delModal').classList.remove('hidden'); 
+        document.getElementById('resModal').classList.remove('hidden'); 
       }"
     >
       <input type="hidden" name="contentType" value="{{.Label}}" />
@@ -67,5 +67,45 @@
         Submit
       </button>
     </form>
+  </div>
+</div>
+
+<div
+  id="resModal"
+  class="fixed inset-0 z-50 flex items-center justify-center hidden"
+  aria-labelledby="modal-title"
+  role="dialog"
+  aria-modal="true"
+>
+  <div
+    class="modal-overlay absolute inset-0 bg-black opacity-50"
+    hx-on="click: document.getElementById('resModal').classList.add('hidden');"
+  ></div>
+
+  <div
+    class="modal-content bg-white rounded-lg overflow-hidden shadow-xl transform transition-all sm:max-w-lg sm:w-full"
+  >
+    <div class="modal-header flex justify-between items-center p-4 border-b">
+      <h5 id="modal-title" class="text-lg font-medium text-indigo-600">
+        Response
+      </h5>
+      <button
+        type="button"
+        class="text-gray-500 hover:text-gray-700"
+        hx-on="click: document.getElementById('resModal').classList.add('hidden'); window.location.reload()"
+      >
+        ×
+      </button>
+    </div>
+    <div id="resModal-content" class="modal-body p-4"></div>
+    <div class="modal-footer flex justify-end p-4 border-t">
+      <button
+        type="button"
+        hx-on="click: document.getElementById('resModal').classList.add('hidden'); window.location.reload()"
+        class="btn btn-secondary text-gray-500 hover:text-gray-700"
+      >
+        OK
+      </button>
+    </div>
   </div>
 </div>
