--- a/templates/table.html
+++ b/templates/table.html
@@ -1,105 +1,163 @@
-<div id="content-table" class="p-6 bg-white">
-  {{ $content_type := .Name }}
-  <h1 class="text-2xl font-semibold mb-4 text-indigo-600">{{.Name}}</h1>
-  <table class="min-w-full border-collapse border border-gray-300">
-    <thead class="bg-indigo-600 text-white">
-      <tr>
-        {{range .Header}}
-        <th
-          class="border border-gray-300 px-4 py-2 text-left text-sm font-medium"
-        >
-          {{.}}
-        </th>
-        {{end}}
-        <th
-          class="border border-gray-300 px-4 py-2 text-left text-sm font-medium"
-        >
-          Actions
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      {{range .Data}}
-      <tr class="hover:bg-indigo-50">
-        {{ $firstElement := index . 0 }} {{range .}}
-        <td class="border border-gray-300 px-4 py-2 text-sm text-gray-700">
-          {{.}}
-        </td>
-        {{end}}
-        <td class="border border-gray-300 px-4 py-2">
-          <button
-            class="text-blue-500 hover:text-blue-700 mr-2"
-            hx-get="/edit/{{ $firstElement }}"
-            hx-target="body"
-            hx-swap="beforeend"
-            hx-vals='{"contentType": "{{ $content_type}}"}'
-            hx-on="htmx:afterRequest: if (event.detail.xhr.status !== 200) {
-            const response = JSON.parse(event.detail.xhr.responseText);
-            alert('Error: ' + response.message); // You can customize this error handling
-          }"
-          >
-            Edit
-          </button>
-          <button
-            hx-delete="data/{{ $firstElement }}"
-            hx-confirm="Are you sure you want to delete this {{ $content_type }}? It might have cascading effects."
-            hx-target="#delModal-content"
+<div>
+  <div id="content-table" class="p-6 bg-white shadow-lg rounded-lg h-2/5">
+    {{ $content_type := .Name }}
+    <div class="flex justify-between items-center mb-6 h-auto">
+      <h1 class="text-3xl font-semibold text-indigo-700">{{.Name}}</h1>
+      <!-- Add New Item Button -->
+      <button
+      hx-get="/modal"
+      hx-target="body"
+      hx-vals='{"modalType": "{{ .Name }}"}'
+        class="h-14 bg-indigo-600 text-white hover:bg-indigo-900 active:bg-indigo-900 hover:text-white py-2 px-6 rounded-md text-sm font-semibold transition duration-200 ease-in-out"
+        hx-swap="beforeend"
+      >
+        Add New {{.Name}}
+      </button>
+      </div>
+
+      <table class="min-w-full border-collapse">
+        <thead class="bg-indigo-600 text-white rounded-t-lg">
+          <tr>
+            {{range .Header}}
+            <th
+              class="border-t border-b border-gray-300 px-6 py-3 text-left text-sm font-medium text-gray-100"
+            >
+              {{.}}
+            </th>
+            {{end}}
+            <th
+              class="border-t border-b border-gray-300 px-6 py-3 text-left text-sm font-medium text-gray-100"
+            >
+              Actions
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          {{range .Data}}
+          <tr
+            class="hover:bg-indigo-50 transition-all duration-300 ease-in-out"
+            hx-on="click: handleRowClick(event)"
+            hx-get="/details/{{ index . 0 }}"
             hx-vals='{"contentType": "{{ $content_type }}"}'
-            hx-ext="json-enc"
-            hx-headers='{"Content-Type": "application/json"}'
+            hx-target="#details"
             hx-swap="innerHTML"
-            hx-on="htmx:afterRequest: if (event.detail.xhr.status === 200) { 
+          >
+            {{ $firstElement := index . 0 }} {{range .}}
+            <td
+              class="border-b border-gray-300 px-6 py-3 text-sm text-gray-700"
+            >
+              {{.}}
+            </td>
+            {{end}}
+            <td class="border-b border-gray-300 px-6 py-3 flex space-x-4">
+              <!-- Edit Button -->
+              <button
+                class="bg-indigo-600 text-white hover:bg-indigo-900 active:bg-indigo-900 hover:text-white py-2 px-6 rounded-md text-sm font-semibold transition duration-200 ease-in-out"
+                hx-get="/edit/{{ $firstElement }}"
+                hx-target="body"
+                hx-swap="beforeend"
+                hx-vals='{"contentType": "{{ $content_type}}"}'
+              >
+                Edit
+              </button>
+              <!-- Delete Button -->
+              <button
+                hx-delete="data/{{ $firstElement }}"
+                hx-confirm="Are you sure you want to delete this {{ $content_type }}? It might have cascading effects."
+                hx-target="#delModal-content"
+                hx-vals='{"contentType": "{{ $content_type }}"}'
+                hx-ext="json-enc"
+                hx-headers='{"Content-Type": "application/json"}'
+                hx-swap="innerHTML"
+                hx-on="htmx:afterRequest: if (event.detail.xhr.status === 200) { 
               const response = JSON.parse(event.detail.xhr.responseText);
               document.getElementById('delModal-content').innerHTML = response.message; 
               document.getElementById('delModal').classList.remove('hidden'); 
             }"
-            class="text-red-500 hover:text-red-700"
-          >
-            Delete
-          </button>
-        </td>
-      </tr>
-      {{end}}
-    </tbody>
-  </table>
-</div>
-
-<div
-  id="delModal"
-  class="fixed inset-0 z-50 flex items-center justify-center hidden"
-  aria-labelledby="modal-title"
-  role="dialog"
-  aria-modal="true"
->
-  <div
-    class="modal-overlay absolute inset-0 bg-black opacity-50"
-    hx-on="click: document.getElementById('delModal').classList.add('hidden');"
-  ></div>
-
-  <div
-    class="modal-content bg-white rounded-lg overflow-hidden shadow-xl transform transition-all sm:max-w-lg sm:w-full"
-  >
-    <div class="modal-header flex justify-between items-center p-4 border-b">
-      <h5 id="modal-title" class="text-lg font-medium text-indigo-600">
-        Response
-      </h5>
-      <button
-        type="button"
-        class="text-gray-500 hover:text-gray-700"
-        hx-on="click: document.getElementById('delModal').classList.add('hidden'); window.location.reload()"
-      >
-        ×
-      </button>
+                class="bg-red-500 text-white hover:bg-red-700 hover:text-white py-2 px-6 rounded-md text-sm font-semibold transition duration-200 ease-in-out"
+              >
+                Delete
+              </button>
+            </td>
+          </tr>
+          {{end}}
+        </tbody>
+      </table>
     </div>
-    <div id="delModal-content" class="modal-body p-4"></div>
-    <div class="modal-footer flex justify-end p-4 border-t">
-      <button
-        type="button"
-        hx-on="click: document.getElementById('delModal').classList.add('hidden'); window.location.reload()"
-        class="btn btn-secondary text-gray-500 hover:text-gray-700"
-      >
-        OK
-      </button>
+    <div id="details" class="h-3/5"></div>
+  </div>
+  <div
+    id="delModal"
+    class="fixed inset-0 z-50 flex items-center justify-center hidden"
+    aria-labelledby="modal-title"
+    role="dialog"
+    aria-modal="true"
+  >
+    <div
+      class="modal-overlay absolute inset-0 bg-black opacity-50"
+      hx-on="click: document.getElementById('delModal').classList.add('hidden');"
+    ></div>
+
+    <div
+      class="modal-content bg-white rounded-lg shadow-xl transform transition-all sm:max-w-lg sm:w-full p-4"
+    >
+      <div class="modal-header flex justify-between items-center border-b pb-3">
+        <h5 id="modal-title" class="text-lg font-medium text-indigo-600">
+          Response
+        </h5>
+        <button
+          type="button"
+          class="text-gray-500 hover:text-gray-700 text-2xl"
+          hx-on="click: document.getElementById('delModal').classList.add('hidden'); window.location.reload()"
+        >
+          ×
+        </button>
+      </div>
+      <div
+        id="delModal-content"
+        class="modal-body pt-4 text-center text-sm text-gray-700"
+      ></div>
+      <div class="modal-footer flex justify-end pt-4 border-t">
+        <button
+          type="button"
+          hx-on="click: document.getElementById('delModal').classList.add('hidden'); window.location.reload()"
+          class="text-gray-500 hover:text-gray-700 py-2 px-4 border rounded-md"
+        >
+          OK
+        </button>
+      </div>
     </div>
   </div>
+
+  <script>
+    let lastClickedRow = null;
+
+    function handleRowClick(event) {
+      const clickedRow = event.currentTarget;
+
+      if (lastClickedRow && lastClickedRow !== clickedRow) {
+        lastClickedRow.classList.remove("highlight");
+      }
+
+      clickedRow.classList.add("highlight");
+
+      lastClickedRow = clickedRow;
+
+      const contentType = "{{ .Name }}";
+
+      const validContentTypes = ["Lecture", "Resource", "Assignment", "Quiz"];
+
+      if (!validContentTypes.includes(contentType)) {
+        const firstElement = clickedRow.querySelector("td").innerText;
+        console.log(`Row clicked: ${firstElement}`);
+      }
+    }
+  </script>
+
+  <style>
+    .highlight {
+      background-color: rgb(165 180 252 / var(--tw-text-opacity, 1));
+      transition: background-color 0.3s ease;
+    }
+  </style>
 </div>
