--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/htmx.org@1.9.12"></script>
     <script src="https://unpkg.com/htmx.org@1.9.12/dist/ext/json-enc.js"></script>
-    <title>Course Management</title>
+    <title>Lesson Plan Management</title>
     <style>
       .active {
         background-color: #4c51bf;
@@ -21,7 +21,7 @@
         class="w-72 bg-indigo-700 text-white shadow-lg transition-all duration-300"
       >
         <div class="flex items-center justify-between px-4 py-6">
-          <h3 class="text-2xl font-semibold">Course Management</h3>
+          <h3 class="text-2xl font-semibold">Lesson Plan</h3>
           <label for="sidebar-toggle" class="cursor-pointer">
             <svg
               xmlns="http://www.w3.org/2000/svg"
